Remove gradle profiles (#28)
- Move gpdb properties to gradle properties
- Use jcentral as the main repository

Authored-by: Francisco Guerrero <aguerrero@pivotal.io>

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -17,8 +17,6 @@
  * under the License.
  */
 
-import org.apache.tools.ant.filters.ReplaceTokens
-
 buildscript {
 
     dependencies {
@@ -32,22 +30,8 @@ plugins {
 }
 
 repositories {
-    mavenCentral()
-    mavenLocal()
-    jcenter {
-        url 'http://jcenter.bintray.com/'
-    }
-    maven {
-        url 'http://repository.jboss.org/nexus/content/groups/public'
-    }
+    jcenter()
 }
-
-// Get database property, use GPDB as a default database
-def database = System.getProperty("database", "gpdb");
-def databaseFileName = "gradle/profiles/" + database + ".properties";
-assert file(databaseFileName).exists()
-def databaseProperties = new Properties()
-file(databaseFileName).withInputStream { databaseProperties.load(it) }
 
 subprojects { subProject ->
     group = 'org.greenplum.pxf'
@@ -84,10 +68,7 @@ subprojects { subProject ->
     }
 
     repositories {
-        // mavenCentral without https:
-        maven { url 'http://repo1.maven.org/maven2' }
-        mavenLocal()
-        maven { url 'http://repo.hortonworks.com/content/repositories/releases/'}
+        jcenter()
     }
 
     dependencies {
@@ -354,23 +335,12 @@ task assemble(type: Copy, dependsOn: [subprojects.jar, project(':pxf-service').w
         into 'bin'
         fileMode 0755
         rename('pxf-service', 'pxf')
-        filter(ReplaceTokens,
-                tokens: [
-                        'pxfPortNum'    : databaseProperties.pxfPortNum,
-                        'pxfDefaultUser': (databaseProperties.pxfDefaultUser == null ? "" : databaseProperties.pxfDefaultUser)])
     }
 
     from("${tomcatTargetDir}/${tomcatName}") { into 'apache-tomcat' }
     from("pxf-service/src/main/resources") { into 'conf' }
     from("pxf-service/src/configs") { include '*-site.xml' into 'conf' }
-    from("pxf-service/src/scripts/pxf-env.sh") {
-        filter(ReplaceTokens,
-                tokens: ['pxfLogDir'     : databaseProperties.pxfLogDir,
-                         'pxfRunDir'     : databaseProperties.pxfRunDir,
-                         'pxfPortNum'    : databaseProperties.pxfPortNum,
-                         'pxfDefaultUser': (databaseProperties.pxfDefaultUser == null ? "" : databaseProperties.pxfDefaultUser),
-                         'pxfDefaultUserImpersonation': (databaseProperties.pxfDefaultUserImpersonation == null ? "" : databaseProperties.pxfDefaultUserImpersonation)]) into 'conf'
-    }
+    from("pxf-service/src/scripts/pxf-env.sh") { into 'conf' }
     from("pxf-service/src/configs/tomcat") { into 'tomcat-templates' }
     from("pxf-service/src/configs/templates") { into 'conf-templates' }
 }
