CI: Add TARGET_OS to the install_hadoop task in the multinode task
Co-authored-by: Ben Christel <bchristel@pivotal.io>
Co-authored-by: Francisco Guerrero <aguerrero@pivotal.io>

--- a/concourse/pxf_pipeline.yml
+++ b/concourse/pxf_pipeline.yml
@@ -284,6 +284,7 @@ jobs:
       params:
         IMPERSONATION: {{enable-impersonation-multinode}}
         PXF_JVM_OPTS: {{pxf-jvm-opts}}
+        TARGET_OS: centos
   - task: test_pxf_multinode
     input_mapping:
       bin_gpdb: gpdb_binary
