--- a/concourse/docker-images.yml
+++ b/concourse/docker-images.yml
@@ -332,7 +332,7 @@ jobs:
         build: .
         dockerfile: pxf_src/concourse/docker/pxf-dev-base/Dockerfile
         build_args:
-          BASE_IMAGE: "ubuntu-gpdb-dev:16.04_gcc_6_3"
+          BASE_IMAGE: "ubuntu-gpdb-dev:16.04"
 
   - name: docker-gpdb-pxf-dev-centos6-cdh-server
     plan:
