Add Go utils to root's PATH as well as gpadmin's
In CI, PXF gets built by root, but in development, we generally use gpadmin.
Therefore, Go utilities need to be on the PATH for both users.

Co-authored-by: Oliver Albertini <oalbertini@pivotal.io>
Co-authored-by: Ben Christel <bchristel@pivotal.io>

--- a/concourse/docker/pxf-dev-base/Dockerfile
+++ b/concourse/docker/pxf-dev-base/Dockerfile
@@ -13,7 +13,11 @@ RUN cd /tmp/pxf_src/server && make tar && \
     ln -s /home/gpadmin/.gradle /root/.gradle && \
     rm -rf /tmp/pxf_src
 
+# install Go utilities in root's home for CI, and in gpadmin's home for development
 RUN yum install -y go && \
+    GOPATH=/root/go go get github.com/golang/dep/cmd/dep && \
+    GOPATH=/root/go go get github.com/onsi/ginkgo/ginkgo && \
+    echo >>/root/.bash_profile 'export PATH="$PATH:/root/go/bin"' && \
     GOPATH=/home/gpadmin/go go get github.com/golang/dep/cmd/dep && \
     GOPATH=/home/gpadmin/go go get github.com/onsi/ginkgo/ginkgo && \
     echo >>/home/gpadmin/.bash_profile 'export PATH="$PATH:/home/gpadmin/go/bin"'
