Docker image: Ensure that gpadmin owns their own home dir
Since the gpadmin user does not exist at this point, we use uid 1000
instead, assuming that gpadmin will later be created with that uid.

Co-authored-by: Oliver Albertini <oalbertini@pivotal.io>
Co-authored-by: Ben Christel <bchristel@pivotal.io>

--- a/concourse/docker/pxf-dev-base/Dockerfile
+++ b/concourse/docker/pxf-dev-base/Dockerfile
@@ -24,4 +24,5 @@ RUN export ORIG_PWD="$(pwd)" && \
     echo >>/root/.bash_profile 'export PATH="/root/go/bin:/usr/local/go/bin:$PATH"' && \
     GOPATH=/home/gpadmin/go /usr/local/go/bin/go get github.com/golang/dep/cmd/dep && \
     GOPATH=/home/gpadmin/go /usr/local/go/bin/go get github.com/onsi/ginkgo/ginkgo && \
-    echo >>/home/gpadmin/.bash_profile 'export PATH="/home/gpadmin/go/bin:/usr/local/go/bin:$PATH"'
+    echo >>/home/gpadmin/.bash_profile 'export PATH="/home/gpadmin/go/bin:/usr/local/go/bin:$PATH"' && \
+    chown 1000:1000 /home/gpadmin/.bash_profile
