--- a/concourse/docker/pxf-dev-base/Dockerfile
+++ b/concourse/docker/pxf-dev-base/Dockerfile
@@ -18,11 +18,13 @@ RUN export ORIG_PWD="$(pwd)" && \
     cd /tmp && \
         wget https://dl.google.com/go/go1.11.1.linux-amd64.tar.gz && \
         tar -C /usr/local -xzf go1.11.1.linux-amd64.tar.gz && \
+        rm -f go1.11.1.linux-amd64.tar.gz && \
     cd "$ORIG_PWD" && \
     GOPATH=/root/go /usr/local/go/bin/go get github.com/golang/dep/cmd/dep && \
     GOPATH=/root/go /usr/local/go/bin/go get github.com/onsi/ginkgo/ginkgo && \
-    echo >>/root/.bash_profile 'export PATH="/root/go/bin:/usr/local/go/bin:$PATH"' && \
+    echo >>/root/.bashrc 'export PATH="/root/go/bin:/usr/local/go/bin:$PATH"' && \
     GOPATH=/home/gpadmin/go /usr/local/go/bin/go get github.com/golang/dep/cmd/dep && \
     GOPATH=/home/gpadmin/go /usr/local/go/bin/go get github.com/onsi/ginkgo/ginkgo && \
-    echo >>/home/gpadmin/.bash_profile 'export PATH="/home/gpadmin/go/bin:/usr/local/go/bin:$PATH"' && \
-    chown 1000:1000 /home/gpadmin/.bash_profile
+    echo >>/home/gpadmin/.bashrc 'export PATH="/home/gpadmin/go/bin:/usr/local/go/bin:$PATH"' && \
+    echo >>/home/gpadmin/.bash_profile 'source ~/.bashrc' && \
+    chown 1000:1000 /home/gpadmin/.bashrc /home/gpadmin/.bash_profile
