Start/stop the PXF cluster via `pxf cluster {start,stop}` command (#34)
We plan to do future CLI development in Go, keeping the existing bash script
around as a wrapper for the Go CLI. If we need to make significant changes
to the CLI as a whole, we may want to replace the bash script entirely.

Co-authored-by: Divya Bhargov <dbhargov@pivotal.io>
Co-authored-by: Ben Christel <bchristel@pivotal.io>
Co-authored-by: Alex Denissov <adenissov@pivotal.io>
Co-authored-by: Oliver Albertini <oalbertini@pivotal.io>

--- a/server/Makefile
+++ b/server/Makefile
@@ -16,6 +16,9 @@
 # under the License.
 #
 # protect the default target for this file from the targets in Makefile.global
+
+PXF_CLI_MAKEFILE_LOCATION = pxf-cli/go/src/pxf-cluster
+
 default: all
 
 ifneq "$(PXF_HOME)" ""
@@ -56,9 +59,12 @@ all:
 	./gradlew clean tar aggregateJavadoc $(BUILD_PARAMS)
 
 compile:
-	./gradlew compileJava
+	./gradlew compileJava && make -C $(PXF_CLI_MAKEFILE_LOCATION)
 
-test unittest:
+test-cli:
+	make -C $(PXF_CLI_MAKEFILE_LOCATION) test
+
+test unittest: test-cli
 	./gradlew test
 
 tar:
