--- a/server/build.gradle
+++ b/server/build.gradle
@@ -355,7 +355,11 @@ task tomcatGet << {
     }
 }
 
-task assemble(type: Copy, dependsOn: [subprojects.jar, project(':pxf-service').war, subprojects.copyRuntimeDependencies, tomcatGet])  {
+task buildCli(type: Exec) {
+    commandLine('make', '-C', 'pxf-cli/go/src/pxf-cluster', 'depend', 'build')
+}
+
+task assemble(type: Copy, dependsOn: [subprojects.jar, project(':pxf-service').war, subprojects.copyRuntimeDependencies, tomcatGet, buildCli])  {
     into "build/stage"
     subprojects { project ->
         from("${project.name}/build/libs") { into 'lib' }
@@ -366,6 +370,10 @@ task assemble(type: Copy, dependsOn: [subprojects.jar, project(':pxf-service').w
         into 'bin'
         fileMode 0755
         rename('pxf-service', 'pxf')
+    }
+    from("pxf-cli/go/src/pxf-cluster/pxf-cluster") {
+        into 'bin'
+        fileMode 0755
     }
 
     from("${tomcatTargetDir}/${tomcatName}") { into 'apache-tomcat' }
