Add help and version commands to PXF CLI (#42)
* Use PXF CLI to run perf tests

- Add help and version commands to pxf cli
the version is pulled into the script during the gradle build.
This felt like the right place to put that, since the information
is in gradle, and gradle is already doing things like chmod
and cp of the script to the install location

Co-authored-by: Oliver Albertini <oalbertini@pivotal.io>
Co-authored-by: Lav Jain <ljain@pivotal.io>
Co-authored-by: Francisco Guerrero <aguerrero@pivotal.io>

* Change the PXF multinode test to use the cluster commands

Co-authored-by: Oliver Albertini <oalbertini@pivotal.io>
Co-authored-by: Lav Jain <ljain@pivotal.io>

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -264,13 +264,13 @@ project('pxf-hive') {
 
 project('pxf-json') {
     dependencies {
-      compile(project(':pxf-hdfs'))
-      compile(project(':pxf-api'))
-      testCompile 'pl.pragmatists:JUnitParams:1.0.2'
+        compile(project(':pxf-hdfs'))
+        compile(project(':pxf-api'))
+        testCompile 'pl.pragmatists:JUnitParams:1.0.2'
     }
 
-    task create_tweets_tgz(type: Exec){
-      commandLine 'tar', '-zcf', 'src/test/resources/tweets.tar.gz', '-C', 'src/test/resources', 'tweets-pp.json'
+    task create_tweets_tgz(type: Exec) {
+        commandLine 'tar', '-zcf', 'src/test/resources/tweets.tar.gz', '-C', 'src/test/resources', 'tweets-pp.json'
     }
 
     tasks['test'].dependsOn('create_tweets_tgz')
@@ -358,7 +358,7 @@ task buildCli(type: Exec) {
     commandLine('make', '-C', 'pxf-cli/go/src/pxf-cluster', 'depend', 'build')
 }
 
-task assemble(type: Copy, dependsOn: [subprojects.jar, project(':pxf-service').war, subprojects.copyRuntimeDependencies, tomcatGet, buildCli])  {
+task assemble(type: Copy, dependsOn: [subprojects.jar, project(':pxf-service').war, subprojects.copyRuntimeDependencies, tomcatGet, buildCli]) {
     into "build/stage"
     subprojects { project ->
         from("${project.name}/build/libs") { into 'lib' }
@@ -369,6 +369,9 @@ task assemble(type: Copy, dependsOn: [subprojects.jar, project(':pxf-service').w
         into 'bin'
         fileMode 0755
         rename('pxf-service', 'pxf')
+        filter {
+            String line -> line.replaceAll("GRADLE_PRINT_PXF_VERSION", "echo PXF version ${version}")
+        }
     }
     from("pxf-cli/go/src/pxf-cluster/pxf-cluster") {
         into 'bin'
@@ -394,7 +397,7 @@ task tar(type: Tar, dependsOn: [assemble]) {
     from assemble.outputs.files
 }
 
-task install (type: Copy, dependsOn: [assemble]) {
+task install(type: Copy, dependsOn: [assemble]) {
     from assemble.outputs.files
     into System.properties['deployPath']
 }
