Fix the go dependencies in the pxf base docker image (#45)
* Cleanup go dependencies in the dockerfile
* Add go dependencies before building pxf in the dockerfile
* Separate out pxf-cli make commands from java
* Fix broken tests due to pxf-cli command output change

Co-authored-by: Oliver Albertini <oalbertini@pivotal.io>
Co-authored-by: Lav Jain <ljain@pivotal.io>

--- a/concourse/docker/pxf-dev-base/Dockerfile
+++ b/concourse/docker/pxf-dev-base/Dockerfile
@@ -4,7 +4,19 @@ FROM pivotaldata/${BASE_IMAGE}
 
 ADD pxf_src /tmp/pxf_src
 
-RUN cd /tmp/pxf_src/server && make tar && \
+# install Go utilities
+RUN cd /tmp && \
+        wget -q https://dl.google.com/go/go1.11.1.linux-amd64.tar.gz && \
+        tar -C /usr/local -xzf go1.11.1.linux-amd64.tar.gz && \
+        rm -f go1.11.1.linux-amd64.tar.gz && \
+    cd - && \
+    GOPATH=/root/go /usr/local/go/bin/go get github.com/golang/dep/cmd/dep && \
+    GOPATH=/root/go /usr/local/go/bin/go get github.com/onsi/ginkgo/ginkgo && \
+    echo >>/etc/bashrc 'export PATH="/root/go/bin:/usr/local/go/bin:$PATH"' && \
+    echo >>/etc/bashrc 'export GOPATH=/root/go'
+
+RUN cd /tmp/pxf_src/server && \
+    GOPATH="/root/go" PATH="/root/go/bin:/usr/local/go/bin:$PATH" make tar && \
     CWD=$(pwd) && cd /tmp/pxf_src/automation && \
     PXF_HOME=/tmp/pxf_src/server/build/stage make dev && \
     mkdir -p /home/gpadmin && \
@@ -12,19 +24,3 @@ RUN cd /tmp/pxf_src/server && make tar && \
     chown -R 1000:1000 /home/gpadmin/.m2 && \
     ln -s /home/gpadmin/.gradle /root/.gradle && \
     rm -rf /tmp/pxf_src
-
-# install Go utilities in root's home for CI, and in gpadmin's home for development
-RUN export ORIG_PWD="$(pwd)" && \
-    cd /tmp && \
-        wget https://dl.google.com/go/go1.11.1.linux-amd64.tar.gz && \
-        tar -C /usr/local -xzf go1.11.1.linux-amd64.tar.gz && \
-        rm -f go1.11.1.linux-amd64.tar.gz && \
-    cd "$ORIG_PWD" && \
-    GOPATH=/root/go /usr/local/go/bin/go get github.com/golang/dep/cmd/dep && \
-    GOPATH=/root/go /usr/local/go/bin/go get github.com/onsi/ginkgo/ginkgo && \
-    echo >>/root/.bashrc 'export PATH="/root/go/bin:/usr/local/go/bin:$PATH"' && \
-    GOPATH=/home/gpadmin/go /usr/local/go/bin/go get github.com/golang/dep/cmd/dep && \
-    GOPATH=/home/gpadmin/go /usr/local/go/bin/go get github.com/onsi/ginkgo/ginkgo && \
-    echo >>/home/gpadmin/.bashrc 'export PATH="/home/gpadmin/go/bin:/usr/local/go/bin:$PATH"' && \
-    echo >>/home/gpadmin/.bash_profile 'source ~/.bashrc' && \
-    chown 1000:1000 /home/gpadmin/.bashrc /home/gpadmin/.bash_profile
