--- a/concourse/docker/pxf-dev-server/Dockerfile
+++ b/concourse/docker/pxf-dev-server/Dockerfile
@@ -10,12 +10,10 @@ FROM pivotaldata/${BASE_IMAGE}
 
 COPY --from=scratch /singlecluster /singlecluster
 
-RUN mkdir -p /etc/hadoop/conf && \
-    cp /singlecluster/hadoop/etc/hadoop/core-site.xml /etc/hadoop/conf && \
-    cp /singlecluster/hadoop/etc/hadoop/hdfs-site.xml /etc/hadoop/conf && \
-    cp /singlecluster/hadoop/etc/hadoop/mapred-site.xml /etc/hadoop/conf && \
-    cp /singlecluster/hadoop/etc/hadoop/yarn-site.xml /etc/hadoop/conf && \
-    mkdir -p /etc/hive/conf && \
-    cp /singlecluster/hive/conf/hive-site.xml /etc/hive/conf && \
-    mkdir -p /etc/hbase/conf && \
-    cp /singlecluster/hbase/conf/hbase-site.xml /etc/hbase/conf
+RUN mkdir -p /etc/hadoop/conf /etc/hive/conf /etc/hbase/conf && \
+    ln -s /singlecluster/hadoop/etc/hadoop/core-site.xml /etc/hadoop/conf && \
+    ln -s /singlecluster/hadoop/etc/hadoop/hdfs-site.xml /etc/hadoop/conf && \
+    ln -s /singlecluster/hadoop/etc/hadoop/mapred-site.xml /etc/hadoop/conf && \
+    ln -s /singlecluster/hadoop/etc/hadoop/yarn-site.xml /etc/hadoop/conf && \
+    ln -s /singlecluster/hive/conf/hive-site.xml /etc/hive/conf && \
+    ln -s /singlecluster/hbase/conf/hbase-site.xml /etc/hbase/conf
