--- a/concourse/settings/perf-settings-50g.yml
+++ b/concourse/settings/perf-settings-50g.yml
@@ -23,7 +23,7 @@ perf-trigger-interval: 336h
 perf-trigger-start: 12:30 PM
 perf-trigger-stop: 12:40 PM
 
-perf-benchmark-s3: false
+perf-benchmark-s3: true
 perf-benchmark-gphdfs: true
 
 job-name: perf-multi-node-50G
